--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                      Whether it’s building a personal portfolio, a web application,
                       or improving user experience,
                      I focus on creating solutions that are both practical and visually appealing</p>
+
+                     <!-- get in touch button -->
                 <button class="inline-block bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition">Get In Touch</button>
             </div> 
             <!-- Profile Image -->
@@ -39,6 +41,31 @@
                 <img src="/assets/images/profile.jpg" alt="Profile Photo" class="w-full h-full object-cover rounded-full border-1 border-blue-500">
             </div>
         </section>
+
+        <!-- About me secction -->
+     <section class="p-2 bg-gray-100 flex justify-between md:flex-row items-center gap-6 
+                shadow-[0_-8px_15px_-3px_rgba(0,0,0,0.2)]">
+  <!-- Profile Image -->
+  <div class="flex-shrink-0">
+    <img src="/assets/images/profile.jpg" alt="Profile" class="w-80 h-80 rounded-md border-blue-500">
+  </div>
+
+  <!-- About Me Text -->
+  <div class="flex flex-col gap-5">
+    <h2 class="text-3xl font-bold mb-4 text-gray-800">About Me</h2>
+ 
+
+    <p class="text-lg text-gray-700 ">
+      Hi! I’m Aline, a Frontend Developer and UX Designer passionate
+       about creating digital experiences that are both beautiful and functional. I specialize in building responsive websites and web applications that provide seamless 
+      user experiences and make complex interactions feel simple and intuitive
+    </p>
+    <p class="text-sm text-gray-700 ">With a strong eye for design and a love for coding, I focus on turning ideas into engaging websites that delight users and help businesses grow. From crafting clean interfaces to implementing smooth functionality, 
+        I combine creativity with technical skills to deliver high-quality solutions.
+    </p>
+    <p class="text-sm text-gray-700 ">Beyond development, I enjoy learning new technologies, exploring UX best practices, and continuously improving my craft. I’m always eager to collaborate on projects that challenge me and contribute positively to the digital world.</p>
+  </div>
+</section>
      </main>
 </body>
 </html>
