--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  <!-- my skills -->
 
   <section>
-    <h1 class="font-bold text-center text-4xl">My Skills</h1>
+    <h1 class="font-bold text-center text-4xl text-gray-700">My Skills</h1>
     <div class="flex justify-center gap-30 my-15">
         <img src="/assets/images/html.jpg" alt="html-logo" class="w-50 h-50">
         <img src="/assets/images/css.jpg" alt="css-logo" class="w-50 h-50">
