--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <!-- Header/Navbar -->
-    <header class="m-1">
-        <nav class="flex justify-between items-center p-4 bg-white shadow-md">
-        <span><img src="/assets/images/my logo.png" alt="logo" class=" w-20 h-auto"></span>
-        <ul class="flex space-x-4 text-lg text-md text-slate-800 font-semibold">
-            <li class="cursor-pointer px-2 py-1 hover:opacity-70 ">Home</li>
-            <li class="cursor-pointer px-2 py-1 hover:opacity-70  ">About</li>
-            <li class="cursor-pointer px-2 py-1 hover:opacity-70 ">Contact Me</li>
+    <header class="my-1 sticky top-0 z-50">
+        <nav class="flex justify-between items-center  px-4 p-0  bg-white shadow-md">
+        <span><img src="/assets/images/my logo.png" alt="logo" class=" w-20 h-auto cursor-pointer  hover:opacity-70"></span>
+        <ul class="flex space-x-4 text-lg text-md text-slate-700 font-semibold">
+            <li class="cursor-pointer px-2 py-1 hover:opacity-70 font-mono ">Home</li>
+            <li class="cursor-pointer px-2 py-1 hover:opacity-70  font-mono">About</li>
+            <li class="cursor-pointer px-2 py-1 hover:opacity-70 font-mono ">Contact Me</li>
         </ul>
         </nav>
     </header>
@@ -91,9 +91,9 @@
     
   <h2 class="text-2xl font-bold text-gray-800  ">Let's get in Touch!</h2>
   <div class="flex justify-between items-center">
-    <img src="/assets/images/gmail.jpg" alt="gmail logo" class="w-10 h-10">
-    <img src="/assets/images/linkedIn.jpg" alt=" linkedIn logo" class="w-8 h-8">
-    <img src="/assets/images/x logo.jpg" alt="x logo" class="w-10 h-10">
+    <img src="/assets/images/gmail.jpg" alt="gmail logo" class="w-10 h-10 cursor-pointer hover:scale-110 hover:opacity-80 transition transform duration-300">
+    <img src="/assets/images/linkedIn.jpg" alt=" linkedIn logo" class="w-8 h-8 cursor-pointer hover:scale-110 hover:opacity-80 transition transform duration-300">
+    <img src="/assets/images/x logo.jpg" alt="x logo" class="w-10 h-10 cursor-pointer hover:scale-110 hover:opacity-80 transition transform duration-300">
   </div>
 
   </div>
@@ -112,7 +112,7 @@
   </form>
   </div>
    </section>
-   <footer class="mt-10 bg-gray-900">
+   <footer class="mt-10 bg-slate-800">
   <p class="text-center text-gray-200 text-sm p-4 border-t border-gray-700">
     © 2025 Aline. All rights reserved.
   </p>
