--- a/index.html
+++ b/index.html
@@ -7,17 +7,38 @@
     <title>My portfolio</title>
 </head>
 <body>
-    <!-- Header/Navbar -->
-    <header class="my-1 sticky top-0 z-50">
-        <nav class="flex justify-between items-center  px-4 p-0  bg-white shadow-md">
-        <span><img src="/assets/images/my logo.png" alt="logo" class=" w-20 h-auto cursor-pointer  hover:opacity-70"></span>
-        <ul class="flex space-x-4 text-lg text-md text-slate-700 font-semibold">
-            <li class="cursor-pointer px-2 py-1 hover:opacity-70 font-mono ">Home</li>
-            <li class="cursor-pointer px-2 py-1 hover:opacity-70  font-mono">About</li>
-            <li class="cursor-pointer px-2 py-1 hover:opacity-70 font-mono ">Contact Me</li>
-        </ul>
-        </nav>
-    </header>
+   <!-- Header/Navbar -->
+<header class="sticky top-0 z-50">
+  <nav class="flex items-center justify-between px-4 py-2 bg-white shadow-md">
+
+    <!-- Logo -->
+    <span>
+      <img src="/assets/images/my logo.png" alt="logo" 
+           class="w-20 h-auto cursor-pointer hover:opacity-80 transition">
+    </span>
+
+    <!-- Hamburger -->
+    <div class="md:hidden">
+      <input type="checkbox" id="menu-toggle" class="peer hidden" />
+      <label for="menu-toggle" class="cursor-pointer text-2xl">☰</label>
+
+      <!-- Mobile Menu -->
+      <ul class="absolute left-0 top-14 w-full bg-white shadow-md flex-col space-y-4 p-4 hidden peer-checked:flex">
+        <li class="cursor-pointer hover:opacity-80  transition font-mono">Home</li>
+        <li class="cursor-pointer hover:opacity-80 transition font-mono">About</li>
+        <li class="cursor-pointer hover:opacity-80 transition font-mono">Contact Me</li>
+      </ul>
+    </div>
+
+    <!-- Desktop Menu -->
+    <ul class="hidden md:flex space-x-6 text-lg text-slate-700 font-semibold">
+      <li class="cursor-pointer hover:opacity-80  transition font-mono">Home</li>
+      <li class="cursor-pointer hover:opacity-80 transition font-mono">About</li>
+      <li class="cursor-pointer hover:opacity-80 transition font-mono">Contact Me</li>
+    </ul>
+
+  </nav>
+</header>
     <!-- Main Content -->
      <main>
         <!-- Hero -->
@@ -34,38 +55,48 @@
                      I focus on creating solutions that are both practical and visually appealing</p>
 
                      <!-- get in touch button -->
-                <button class="inline-block bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition">Get In Touch</button>
+                <button class="inline-block bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition md:mx-10">Get In Touch</button>
             </div> 
             <!-- Profile Image -->
-            <div class="w-auto h-auto mb-6 md:mb-0 md:mr-6">
+            <div class="w-auto h-auto mt-10 mb-6 ">
                 <img src="/assets/images/profile.jpg" alt="Profile Photo" class="w-full h-full object-cover rounded-full border-4 border-blue-500">
             </div>
         </section>
+<!-- About me section -->
+<section class="p-4 bg-slate-600 flex flex-col md:flex-row items-center gap-6 m-10 rounded-lg shadow-md">
 
-        <!-- About me secction -->
-     <section class="p-2 bg-slate-600 flex justify-between md:flex-row items-center gap-6 m-10 p-4 rounded-lg shadow-md">
   <!-- Profile Image -->
   <div class="flex-shrink-0">
-    <img src="/assets/images/profile.jpg" alt="Profile" class="w-80 h-90 rounded-md border-blue-500 ">
+    <img src="/assets/images/profile.jpg" alt="Profile" 
+         class="w-48 h-48 md:w-80 md:h-80 rounded-md border-4 border-blue-500 object-cover">
   </div>
 
   <!-- About Me Text -->
+  <div class="flex flex-col gap-5 text-center md:text-left">
+    <h2 class="text-3xl font-bold text-white">About Me</h2>
 
-  <div class="flex flex-col gap-5">
-    <h2 class="text-3xl font-bold mb-4 text-white">About Me</h2>
- 
-
-    <p class="text-lg text-gray-700 text-white ">
+    <p class="text-lg text-white">
       Hi! I’m Aline, a Frontend Developer and UX Designer passionate
-       about creating digital experiences that are both beautiful and functional. I specialize in building responsive websites and web applications that provide seamless 
-      user experiences and make complex interactions feel simple and intuitive
+      about creating digital experiences that are both beautiful and functional. 
+      I specialize in building responsive websites and web applications that provide seamless 
+      user experiences and make complex interactions feel simple and intuitive.
     </p>
-    <p class="text-sm text-gray-700 text-white">With a strong eye for design and a love for coding, I focus on turning ideas into engaging websites that delight users and help businesses grow. From crafting clean interfaces to implementing smooth functionality, 
-        I combine creativity with technical skills to deliver high-quality solutions.
+
+    <p class="text-sm text-white">
+      With a strong eye for design and a love for coding, I focus on turning ideas into engaging websites 
+      that delight users and help businesses grow. From crafting clean interfaces to implementing 
+      smooth functionality, I combine creativity with technical skills to deliver high-quality solutions.
     </p>
-    <p class="text-sm text-gray-700 text-white ">Beyond development, I enjoy learning new technologies, exploring UX best practices, and continuously improving my craft. I’m always eager to collaborate on projects that challenge me and contribute positively to the digital world.</p>
+
+    <p class="text-sm text-white">
+      Beyond development, I enjoy learning new technologies, exploring UX best practices, and 
+      continuously improving my craft. I’m always eager to collaborate on projects that challenge me 
+      and contribute positively to the digital world.
+    </p>
   </div>
+
 </section>
+
 
  <!-- my skills -->
 
