changed font of navigation menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <label for="menu-toggle" class="cursor-pointer text-2xl">☰</label>
 
       <!-- Mobile Menu -->
-      <ul class="absolute left-0 top-14 w-full bg-white shadow-md flex-col space-y-4 p-4 hidden peer-checked:flex">
+      <ul class="absolute left-0 top-14 w-full bg-white text-lg text-slate-700 font-semibold shadow-md flex-col space-y-4 p-4 hidden peer-checked:flex">
         <li class="cursor-pointer hover:opacity-80  transition font-mono">Home</li>
         <li class="cursor-pointer hover:opacity-80 transition font-mono">About</li>
         <li class="cursor-pointer hover:opacity-80 transition font-mono">Contact Me</li>
