--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
       <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
 
         <!-- Project 1: Todo List -->
+        <a href="https://github.com/Isingizwe12/To-Do-List-Web-Application" target="_blank">
         <div
           class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transform hover:scale-105 transition duration-300">
-          <img src="/assets/images/todo.jpg" alt="Todo List Screenshot" class="w-full h-48 object-cover">
+          <img src="/assets/images/todo.jpg" alt="Todo List Screenshot" class="w-full h-48 object-cover"> 
           <div class="p-4">
             <h3 class="font-bold text-xl mb-2">Todo List</h3>
             <p class="text-gray-600 mb-2">
@@ -145,7 +146,7 @@
             </div>
           </div>
         </div>
-
+        </a>
         <!-- Project 2: Rock Scissor Paper -->
         <div
           class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transform hover:scale-105 transition duration-300">
@@ -165,7 +166,8 @@
         </div>
 
         <!-- Project 3: Calculator -->
-        <div
+         <a href="https://github.com/Isingizwe12/calculator" target="_blank">
+          <div
           class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transform hover:scale-105 transition duration-300">
           <img src="/assets/images/calculator.jpg" alt="Calculator Screenshot" class="w-full h-48 object-cover">
           <div class="p-4">
@@ -180,7 +182,7 @@
             </div>
           </div>
         </div>
-
+        </a>
       </section>
     </section>
 
