--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
           I focus on creating solutions that are both practical and visually appealing</p>
 
         <!-- get in touch button -->
-        <button
-          class="inline-block bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition md:mx-10">Get
-          In Touch</button>
+       <button
+  class="inline-block text-white px-6 py-2 rounded-full 
+  bg-gradient-to-r from-blue-500 via-blue-400 to-indigo-500 
+  hover:from-blue-600 hover:via-purple-600 hover:to-blue-600
+  transition duration-300 md:mx-10">
+  Get In Touch
+</button>
       </div>
       <!-- Profile Image -->
       <div class="w-auto h-auto mt-10 mb-6 ">
